Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-1788

Plasma store crashes when trying to abort objects for disconnected client

    XMLWordPrintableJSON

Details

    Description

      ARROW-1775 introduces the ability to abort objects in the Plasma store. When a client disconnects, the store iterates through all of the objects and either removes the client from the list of object users or aborts the object, depending on whether the object was sealed or not.

      Before aborting the object, the store does not first check whether the client was the one who created the object. Right now, if a different client created the object, the store will crash when aborting it.

      Attachments

        Issue Links

          Activity

            People

              swangster Stephanie Wang
              swangster Stephanie Wang
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: