ARROW-1788 Fix Plasma store abort bug on client disconnection

Author: Stephanie <swang@cs.berkeley.edu>

Closes #1299 from stephanie-wang/plasma-client-disconnect-bug and squashes the following commits:

295144bd [Stephanie] Revert disconnect client check
8e24affd [Stephanie] Refactor abort_object to match remove_client_from_object_clients
b41591d5 [Stephanie] When disconnecting a plasma client, only abort the objects that the client created
50932e53 [Stephanie] Add Plasma test for multiple clients