cpp/src/plasma/store.h
@@ -74,7 +74,14 @@ class PlasmaStore {
   int create_object(const ObjectID& object_id, int64_t data_size, int64_t metadata_size,
                     Client* client, PlasmaObject* result);
 
-  void abort_object(const ObjectID& object_id);
+  /// Abort a created but unsealed object. If the client is not the
+  /// creator, then the abort will fail.
+  ///
+  /// @param object_id Object ID of the object to be aborted.
+  /// @param client The client who created the object. If this does not
+  ///   match the creator of the object, then the abort will fail.
+  /// @return 1 if the abort succeeds, else 0.
+  int abort_object(const ObjectID& object_id, Client* client);
 
   /// Delete objects that have been created in the hash table. This should only
   /// be called on objects that are returned by the eviction policy to evict.
